fix press indication on mobile and add legendary

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -36,3 +36,7 @@
     transform: rotate(360deg);
   }
 }
+
+* {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
