--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -3,7 +3,6 @@
   flex-direction: column;
   align-items: center;
   margin: 35px 40px;
-  border: 10px solid rgb(247, 223, 13);
   border-radius: 4px;
   padding: 10px 20px;
   background-color: antiquewhite;
